Added edit functionality

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -448,7 +448,7 @@ ul.footer__contacts{
         background-size: cover;
     }
     &__edit{
-        display: none;
+        // display: none;
         cursor: pointer;
         width: 20px;
         height: 20px;
