--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -1,8 +1,3 @@
-@media (max-width: 996px){
-    
-}
-
-
 
 
 @media (max-width: 900px){
@@ -11,6 +6,12 @@
             font-size: 40px;
             line-height: 50px;
         }
+    }
+    .right-side{
+        padding-left: 50px;
+    }
+    .list-empty{
+        font-size: 24px;
     }
 }
 
@@ -27,6 +28,20 @@
         }
     }
 
+    .left-side{
+        position: absolute;
+        left: 0;
+        transition: all .3s ease;
+        transform: translateX(-100%);
+        z-index: 50;
+        min-height: 100vh;
+        &--active{
+            transform: translateX(0);
+        }
+    }
+    .task:last-child{
+        margin-bottom: 30px;
+    }
 }
 
 @media (max-width: 595px){
@@ -42,6 +57,37 @@
         }
         .line-2{
             width: auto;
+        }
+    }
+    .task{
+        padding: 15px 20px;
+    }
+    .add-form__input{
+        font-size: 27px;
+    }
+    .left-side{
+        .logo{
+            font-size: 30px;
+            margin-bottom: 10px;
+            &__img-box{
+                background-size: contain;
+                width: 50px;
+                height: 50px;
+                background-repeat: no-repeat;
+            }
+        }
+    }
+    .collections{
+        &__title{
+            font-size: 24px;
+        }
+    }
+    .nav{
+        &__item{
+            font-size: 25px;
+        }
+        &__item::before{
+            top:-7px;
         }
     }
 }
